err/ceda-cc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ceda_cc'...
Compiling './lib/python3.5/site-packages/ceda_cc/amap2nco.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/amap2nco.py", line 78
    print d
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/c4.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/c4.py", line 14
    print ccinit.__doc__
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/c4_run.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/c4_run.py", line 23
    print 'ceda-cc version %s [%s]' % (version,versionComment)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/ccinit.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/ccinit.py", line 61
    print __doc__
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/ccmi_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/ccmi_vocabs/mip'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/ccmi_vocabs/oldmip'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cf'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cmip5_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cmip5_vocabs/mip'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cordex_dkrz_oct'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cordex_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/cordex_vocabs/mip'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/esacci_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/pmip3_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/pmip3_vocabs/mip'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/specs_vocabs'...
Listing './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config/specs_vocabs/mip'...
Compiling './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config_c4.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/ceda_cc_config/config_c4.py", line 134
    print 'readVocab.driver: option %s not recgnised' % tt[0]
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/fcc_utils.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/ceda_cc_config/fcc_utils.py", line 77
    print 'OK:::', ee[k]
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/ceda_cc_config/utils_config.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/ceda_cc_config/utils_config.py", line 95
    print 'OK:::', ee[k]
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/checkT.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/checkT.py", line 190
    print 'dates do not match: %s, %s:: %s' % (t1,str(t2),j1-j0)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/comp_mip.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/comp_mip.py", line 92
    print 'WARNING[A]: standard name for %s [%s] not set' % (k,e1[k][1].get('long_name') )
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/extractMipInfo.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/extractMipInfo.py", line 195
    print "WARNING[X1]: axis %s declared and not used in table %s" % (k,tab)
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/fcc_utils.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/fcc_utils.py", line 236
    print 'segment test id %s not recognised' % qfns.segments[k][0]
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/fcc_utils2.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/fcc_utils2.py", line 90
    print 'OK:::', ee[k]
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/file_utils.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/file_utils.py", line 24
    exec cmd
           ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/ceda_cc/ncq3.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/ncq3.py", line 98
    print '%s not in %s' % (name,str(self.varlist))
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/summary.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/summary.py", line 8
    print '############################ %s' % HERE
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/summary_by_error_code.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/summary_by_error_code.py", line 91
    print "CODE: %s (%d files)" % (k, len(files))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/testT.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/testT.py", line 10
    print ct.julianDay( 6,1, year=1990)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/unitTestsS1.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/unitTestsS1.py", line 89
    print 'OK: [%s] %s: %s %s file name %s' % (testId,fn,vstr,k,pstr)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ceda_cc/unitTestsS2.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/unitTestsS2.py", line 23
    print 'Failed to parse a simple dummy file path'
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ceda_cc/utils_c4.py'...
***   File "./lib/python3.5/site-packages/ceda_cc/utils_c4.py", line 35
    print  'Time unit %s not supported' % u
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ceda_cc-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
